# gag-back

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
catalogue/: admin.py  models.py  serializers.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_auto_20230227_1008.py  0003_auto_20230303_0521.py  0004_alter_product_images_product_images.py  0005_auto_20230304_1727.py  0006_auto_20230304_1810.py  0007_auto_20230325_0540.py  0008_auto_20230325_0617.py  0009_comp_logo.py
contacts/: admin.py  models.py  serializers.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_rename_contatcs_contacts.py
delivery/: admin.py  models.py  serializers.py  urls.py  views.py
delivery/migrations/: 0001_initial.py  0002_auto_20230311_1637.py  0003_auto_20230312_0834.py  0004_alter_delivery_options.py
django_project/: config.py  settings.py  urls.py
main_page/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
main_page/migrations/: 0001_initial.py  0002_auto_20230303_1044.py  0003_auto_20230304_1727.py  0004_alter_main_page_title_en.py  0005_auto_20230304_1744.py
media/main_page/catalogue_doc/: index.html  текст_Fb15zYI.docx
news/: admin.py  models.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_auto_20230227_0953.py  0003_auto_20230304_1727.py
vacancies/: admin.py  models.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_jobs_icon.py  0003_alter_jobs_icon.py  0004_alter_jobs_icon.py  0005_alter_jobs_options.py  0006_auto_20230306_1031.py
